tddParser.swift
// Generated from tdd.g4 by ANTLR 4.7.2
import Antlr4

open class tddParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = tddParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(tddParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, OPEN_BLOCK = 1, CLOSE_BLOCK = 2, OPEN_PAR = 3, CLOSE_PAR = 4, 
                 OPEN_COMMENT = 5, CLOSE_COMMENT = 6, OPEN_HEADER = 7, CLOSE_HEADER = 8, 
                 SEMI_COLON = 9, COLON = 10, ADD = 11, SUBSTRACT = 12, MULTIPLY = 13, 
                 DIVIDE = 14, LESS_THAN = 15, GREATER_THAN = 16, AND = 17, 
                 OR = 18, DIFFERENT = 19, NOT = 20, EQUALITY = 21, EQUALS = 22, 
                 PARAM_HEADER = 23, RETURN_HEADER = 24, TEST_HEADER = 25, 
                 FAT_ARROW = 26, VOID = 27, MAIN = 28, RETURN = 29, WHILE = 30, 
                 IF = 31, ELSE = 32, ELSEIF = 33, PRINT = 34, ALV = 35, 
                 COMMA = 36, TYPE = 37, ID = 38, CONST = 39, DESCRIPTION = 40, 
                 VALUE = 41, NUMBER = 42, STRING_VAL = 43, CHAR_VAL = 44, 
                 INT_VAL = 45, FLOAT_VAL = 46, BOOL_VAL = 47, WHITESPACE = 48, 
                 NEWLINE = 49
	}

	public
	static let RULE_program = 0, RULE_function = 1, RULE_header = 2, RULE_header_body = 3, 
            RULE_param = 4, RULE_return_test = 5, RULE_test = 6, RULE_test_inputs = 7, 
            RULE_function_dec = 8, RULE_void_function_dec = 9, RULE_inputs = 10, 
            RULE_function_body = 11, RULE_void_function_body = 12, RULE_body = 13, 
            RULE_return_statement = 14, RULE_main = 15, RULE_variable = 16, 
            RULE_var_declaration = 17, RULE_statement = 18, RULE_condition_check = 19, 
            RULE_condition = 20, RULE_hiper_expresion = 21, RULE_expresion = 22, 
            RULE_exp = 23, RULE_termino = 24, RULE_factor = 25, RULE_print = 26, 
            RULE_algo_imprimible = 27, RULE_asignation = 28, RULE_while_loop = 29

	public
	static let ruleNames: [String] = [
		"program", "function", "header", "header_body", "param", "return_test", 
		"test", "test_inputs", "function_dec", "void_function_dec", "inputs", 
		"function_body", "void_function_body", "body", "return_statement", "main", 
		"variable", "var_declaration", "statement", "condition_check", "condition", 
		"hiper_expresion", "expresion", "exp", "termino", "factor", "print", "algo_imprimible", 
		"asignation", "while_loop"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'{'", "'}'", "'('", "')'", "'/*'", "'*/'", "'#*'", "'*#'", "';'", 
		"':'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'&&'", "'||'", "'!='", 
		"'!'", "'=='", "'='", "'@param'", "'@return'", "'@test'", "'=>'", "'void'", 
		"'main'", "'return'", "'while'", "'if'", "'else'", "'elseif'", "'print'", 
		"'alv'", "','"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "OPEN_BLOCK", "CLOSE_BLOCK", "OPEN_PAR", "CLOSE_PAR", "OPEN_COMMENT", 
		"CLOSE_COMMENT", "OPEN_HEADER", "CLOSE_HEADER", "SEMI_COLON", "COLON", 
		"ADD", "SUBSTRACT", "MULTIPLY", "DIVIDE", "LESS_THAN", "GREATER_THAN", 
		"AND", "OR", "DIFFERENT", "NOT", "EQUALITY", "EQUALS", "PARAM_HEADER", 
		"RETURN_HEADER", "TEST_HEADER", "FAT_ARROW", "VOID", "MAIN", "RETURN", 
		"WHILE", "IF", "ELSE", "ELSEIF", "PRINT", "ALV", "COMMA", "TYPE", "ID", 
		"CONST", "DESCRIPTION", "VALUE", "NUMBER", "STRING_VAL", "CHAR_VAL", "INT_VAL", 
		"FLOAT_VAL", "BOOL_VAL", "WHITESPACE", "NEWLINE"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "tdd.g4" }

	override open
	func getRuleNames() -> [String] { return tddParser.ruleNames }

	override open
	func getSerializedATN() -> String { return tddParser._serializedATN }

	override open
	func getATN() -> ATN { return tddParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return tddParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,tddParser._ATN,tddParser._decisionToDFA, tddParser._sharedContextCache)
	}


	public class ProgramContext: ParserRuleContext {
			open
			func main() -> MainContext? {
				return getRuleContext(MainContext.self, 0)
			}
			open
			func variable() -> [VariableContext] {
				return getRuleContexts(VariableContext.self)
			}
			open
			func variable(_ i: Int) -> VariableContext? {
				return getRuleContext(VariableContext.self, i)
			}
			open
			func function() -> [FunctionContext] {
				return getRuleContexts(FunctionContext.self)
			}
			open
			func function(_ i: Int) -> FunctionContext? {
				return getRuleContext(FunctionContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_program
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterProgram(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitProgram(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, tddParser.RULE_program)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(63)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == tddParser.Tokens.TYPE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(60)
		 		try variable()


		 		setState(65)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(69)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == tddParser.Tokens.OPEN_HEADER.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(66)
		 		try function()


		 		setState(71)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(72)
		 	try main()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionContext: ParserRuleContext {
			open
			func header() -> HeaderContext? {
				return getRuleContext(HeaderContext.self, 0)
			}
			open
			func function_dec() -> Function_decContext? {
				return getRuleContext(Function_decContext.self, 0)
			}
			open
			func OPEN_BLOCK() -> TerminalNode? {
				return getToken(tddParser.Tokens.OPEN_BLOCK.rawValue, 0)
			}
			open
			func function_body() -> Function_bodyContext? {
				return getRuleContext(Function_bodyContext.self, 0)
			}
			open
			func CLOSE_BLOCK() -> TerminalNode? {
				return getToken(tddParser.Tokens.CLOSE_BLOCK.rawValue, 0)
			}
			open
			func void_function_dec() -> Void_function_decContext? {
				return getRuleContext(Void_function_decContext.self, 0)
			}
			open
			func void_function_body() -> Void_function_bodyContext? {
				return getRuleContext(Void_function_bodyContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_function
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterFunction(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitFunction(self)
			}
		}
	}
	@discardableResult
	 open func function() throws -> FunctionContext {
		var _localctx: FunctionContext = FunctionContext(_ctx, getState())
		try enterRule(_localctx, 2, tddParser.RULE_function)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(86)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,2, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(74)
		 		try header()
		 		setState(75)
		 		try function_dec()
		 		setState(76)
		 		try match(tddParser.Tokens.OPEN_BLOCK.rawValue)
		 		setState(77)
		 		try function_body()
		 		setState(78)
		 		try match(tddParser.Tokens.CLOSE_BLOCK.rawValue)

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(80)
		 		try header()
		 		setState(81)
		 		try void_function_dec()
		 		setState(82)
		 		try match(tddParser.Tokens.OPEN_BLOCK.rawValue)
		 		setState(83)
		 		try void_function_body()
		 		setState(84)
		 		try match(tddParser.Tokens.CLOSE_BLOCK.rawValue)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class HeaderContext: ParserRuleContext {
			open
			func OPEN_HEADER() -> TerminalNode? {
				return getToken(tddParser.Tokens.OPEN_HEADER.rawValue, 0)
			}
			open
			func header_body() -> Header_bodyContext? {
				return getRuleContext(Header_bodyContext.self, 0)
			}
			open
			func CLOSE_HEADER() -> TerminalNode? {
				return getToken(tddParser.Tokens.CLOSE_HEADER.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_header
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterHeader(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitHeader(self)
			}
		}
	}
	@discardableResult
	 open func header() throws -> HeaderContext {
		var _localctx: HeaderContext = HeaderContext(_ctx, getState())
		try enterRule(_localctx, 4, tddParser.RULE_header)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(88)
		 	try match(tddParser.Tokens.OPEN_HEADER.rawValue)
		 	setState(89)
		 	try header_body()
		 	setState(90)
		 	try match(tddParser.Tokens.CLOSE_HEADER.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Header_bodyContext: ParserRuleContext {
			open
			func DESCRIPTION() -> TerminalNode? {
				return getToken(tddParser.Tokens.DESCRIPTION.rawValue, 0)
			}
			open
			func return_test() -> Return_testContext? {
				return getRuleContext(Return_testContext.self, 0)
			}
			open
			func param() -> [ParamContext] {
				return getRuleContexts(ParamContext.self)
			}
			open
			func param(_ i: Int) -> ParamContext? {
				return getRuleContext(ParamContext.self, i)
			}
			open
			func test() -> [TestContext] {
				return getRuleContexts(TestContext.self)
			}
			open
			func test(_ i: Int) -> TestContext? {
				return getRuleContext(TestContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_header_body
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterHeader_body(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitHeader_body(self)
			}
		}
	}
	@discardableResult
	 open func header_body() throws -> Header_bodyContext {
		var _localctx: Header_bodyContext = Header_bodyContext(_ctx, getState())
		try enterRule(_localctx, 6, tddParser.RULE_header_body)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(111)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,6, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(92)
		 		try match(tddParser.Tokens.DESCRIPTION.rawValue)
		 		setState(94) 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		repeat {
		 			setState(93)
		 			try param()


		 			setState(96); 
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		} while (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == tddParser.Tokens.PARAM_HEADER.rawValue
		 		      return testSet
		 		 }())
		 		setState(98)
		 		try return_test()
		 		setState(100) 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		repeat {
		 			setState(99)
		 			try test()


		 			setState(102); 
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		} while (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == tddParser.Tokens.TEST_HEADER.rawValue
		 		      return testSet
		 		 }())

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(104)
		 		try match(tddParser.Tokens.DESCRIPTION.rawValue)
		 		setState(108)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == tddParser.Tokens.PARAM_HEADER.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(105)
		 			try param()


		 			setState(110)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ParamContext: ParserRuleContext {
			open
			func PARAM_HEADER() -> TerminalNode? {
				return getToken(tddParser.Tokens.PARAM_HEADER.rawValue, 0)
			}
			open
			func TYPE() -> TerminalNode? {
				return getToken(tddParser.Tokens.TYPE.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(tddParser.Tokens.ID.rawValue, 0)
			}
			open
			func DESCRIPTION() -> TerminalNode? {
				return getToken(tddParser.Tokens.DESCRIPTION.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_param
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterParam(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitParam(self)
			}
		}
	}
	@discardableResult
	 open func param() throws -> ParamContext {
		var _localctx: ParamContext = ParamContext(_ctx, getState())
		try enterRule(_localctx, 8, tddParser.RULE_param)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(113)
		 	try match(tddParser.Tokens.PARAM_HEADER.rawValue)
		 	setState(114)
		 	try match(tddParser.Tokens.TYPE.rawValue)
		 	setState(115)
		 	try match(tddParser.Tokens.ID.rawValue)
		 	setState(116)
		 	try match(tddParser.Tokens.DESCRIPTION.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Return_testContext: ParserRuleContext {
			open
			func RETURN_HEADER() -> TerminalNode? {
				return getToken(tddParser.Tokens.RETURN_HEADER.rawValue, 0)
			}
			open
			func TYPE() -> TerminalNode? {
				return getToken(tddParser.Tokens.TYPE.rawValue, 0)
			}
			open
			func DESCRIPTION() -> TerminalNode? {
				return getToken(tddParser.Tokens.DESCRIPTION.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_return_test
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterReturn_test(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitReturn_test(self)
			}
		}
	}
	@discardableResult
	 open func return_test() throws -> Return_testContext {
		var _localctx: Return_testContext = Return_testContext(_ctx, getState())
		try enterRule(_localctx, 10, tddParser.RULE_return_test)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(118)
		 	try match(tddParser.Tokens.RETURN_HEADER.rawValue)
		 	setState(119)
		 	try match(tddParser.Tokens.TYPE.rawValue)
		 	setState(120)
		 	try match(tddParser.Tokens.DESCRIPTION.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TestContext: ParserRuleContext {
			open
			func TEST_HEADER() -> TerminalNode? {
				return getToken(tddParser.Tokens.TEST_HEADER.rawValue, 0)
			}
			open
			func OPEN_PAR() -> TerminalNode? {
				return getToken(tddParser.Tokens.OPEN_PAR.rawValue, 0)
			}
			open
			func CLOSE_PAR() -> TerminalNode? {
				return getToken(tddParser.Tokens.CLOSE_PAR.rawValue, 0)
			}
			open
			func FAT_ARROW() -> TerminalNode? {
				return getToken(tddParser.Tokens.FAT_ARROW.rawValue, 0)
			}
			open
			func VALUE() -> TerminalNode? {
				return getToken(tddParser.Tokens.VALUE.rawValue, 0)
			}
			open
			func test_inputs() -> Test_inputsContext? {
				return getRuleContext(Test_inputsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_test
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterTest(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitTest(self)
			}
		}
	}
	@discardableResult
	 open func test() throws -> TestContext {
		var _localctx: TestContext = TestContext(_ctx, getState())
		try enterRule(_localctx, 12, tddParser.RULE_test)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(122)
		 	try match(tddParser.Tokens.TEST_HEADER.rawValue)
		 	setState(123)
		 	try match(tddParser.Tokens.OPEN_PAR.rawValue)
		 	setState(125)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == tddParser.Tokens.VALUE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(124)
		 		try test_inputs()

		 	}

		 	setState(127)
		 	try match(tddParser.Tokens.CLOSE_PAR.rawValue)
		 	setState(128)
		 	try match(tddParser.Tokens.FAT_ARROW.rawValue)
		 	setState(129)
		 	try match(tddParser.Tokens.VALUE.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Test_inputsContext: ParserRuleContext {
			open
			func VALUE() -> TerminalNode? {
				return getToken(tddParser.Tokens.VALUE.rawValue, 0)
			}
			open
			func COMMA() -> TerminalNode? {
				return getToken(tddParser.Tokens.COMMA.rawValue, 0)
			}
			open
			func test_inputs() -> Test_inputsContext? {
				return getRuleContext(Test_inputsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_test_inputs
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterTest_inputs(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitTest_inputs(self)
			}
		}
	}
	@discardableResult
	 open func test_inputs() throws -> Test_inputsContext {
		var _localctx: Test_inputsContext = Test_inputsContext(_ctx, getState())
		try enterRule(_localctx, 14, tddParser.RULE_test_inputs)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(135)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,8, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(131)
		 		try match(tddParser.Tokens.VALUE.rawValue)

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(132)
		 		try match(tddParser.Tokens.VALUE.rawValue)
		 		setState(133)
		 		try match(tddParser.Tokens.COMMA.rawValue)
		 		setState(134)
		 		try test_inputs()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Function_decContext: ParserRuleContext {
			open
			func TYPE() -> TerminalNode? {
				return getToken(tddParser.Tokens.TYPE.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(tddParser.Tokens.ID.rawValue, 0)
			}
			open
			func OPEN_PAR() -> TerminalNode? {
				return getToken(tddParser.Tokens.OPEN_PAR.rawValue, 0)
			}
			open
			func CLOSE_PAR() -> TerminalNode? {
				return getToken(tddParser.Tokens.CLOSE_PAR.rawValue, 0)
			}
			open
			func inputs() -> InputsContext? {
				return getRuleContext(InputsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_function_dec
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterFunction_dec(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitFunction_dec(self)
			}
		}
	}
	@discardableResult
	 open func function_dec() throws -> Function_decContext {
		var _localctx: Function_decContext = Function_decContext(_ctx, getState())
		try enterRule(_localctx, 16, tddParser.RULE_function_dec)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(137)
		 	try match(tddParser.Tokens.TYPE.rawValue)
		 	setState(138)
		 	try match(tddParser.Tokens.ID.rawValue)
		 	setState(139)
		 	try match(tddParser.Tokens.OPEN_PAR.rawValue)
		 	setState(141)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == tddParser.Tokens.TYPE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(140)
		 		try inputs()

		 	}

		 	setState(143)
		 	try match(tddParser.Tokens.CLOSE_PAR.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Void_function_decContext: ParserRuleContext {
			open
			func VOID() -> TerminalNode? {
				return getToken(tddParser.Tokens.VOID.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(tddParser.Tokens.ID.rawValue, 0)
			}
			open
			func OPEN_PAR() -> TerminalNode? {
				return getToken(tddParser.Tokens.OPEN_PAR.rawValue, 0)
			}
			open
			func CLOSE_PAR() -> TerminalNode? {
				return getToken(tddParser.Tokens.CLOSE_PAR.rawValue, 0)
			}
			open
			func inputs() -> InputsContext? {
				return getRuleContext(InputsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_void_function_dec
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterVoid_function_dec(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitVoid_function_dec(self)
			}
		}
	}
	@discardableResult
	 open func void_function_dec() throws -> Void_function_decContext {
		var _localctx: Void_function_decContext = Void_function_decContext(_ctx, getState())
		try enterRule(_localctx, 18, tddParser.RULE_void_function_dec)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(145)
		 	try match(tddParser.Tokens.VOID.rawValue)
		 	setState(146)
		 	try match(tddParser.Tokens.ID.rawValue)
		 	setState(147)
		 	try match(tddParser.Tokens.OPEN_PAR.rawValue)
		 	setState(149)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == tddParser.Tokens.TYPE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(148)
		 		try inputs()

		 	}

		 	setState(151)
		 	try match(tddParser.Tokens.CLOSE_PAR.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class InputsContext: ParserRuleContext {
			open
			func TYPE() -> TerminalNode? {
				return getToken(tddParser.Tokens.TYPE.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(tddParser.Tokens.ID.rawValue, 0)
			}
			open
			func COMMA() -> TerminalNode? {
				return getToken(tddParser.Tokens.COMMA.rawValue, 0)
			}
			open
			func inputs() -> InputsContext? {
				return getRuleContext(InputsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return tddParser.RULE_inputs
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.enterInputs(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? tddListener {
				listener.exitInputs(self)
			}
		}
	}
	@discardableResult
	 open func inputs() throws -> InputsContext {
		var _localctx: InputsContext = InputsContext(_ctx, getState())
		try enterRule(_localctx, 20, tddParser.RULE_inputs)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(159)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,11, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(153)
		 		try match(tddParser.Tokens.TYPE.rawValue)
		 		setState(154)
		 		try match(tddParser.Tokens.ID.rawValue)
